--- a/public/admin/assets/css/style.css
+++ b/public/admin/assets/css/style.css
@@ -2834,7 +2834,8 @@ body.fixed-left .side-menu.left {
 }
 
 #sidebar-menu ul ul li.active a {
-    color: #242c6d
+    color: #242c6d;
+    background: #dfdde9
 }
 
 #sidebar-menu ul ul li.active a:before {
@@ -2851,11 +2852,14 @@ body.fixed-left .side-menu.left {
     color: rgba(45, 59, 72, .8);
     display: block;
     padding: 12px 25px 12px 60px;
-    font-size: 14px
+    font-size: 14px;
+    background: white;
+    border: 1px solid #ececec91;
 }
 
 #sidebar-menu ul ul a:hover {
-    color: #2d3b48
+    color: #2d3b48;
+    background: #dfdde9
 }
 
 #sidebar-menu ul ul a i {
@@ -2871,7 +2875,10 @@ body.fixed-left .side-menu.left {
     display: block;
     padding: 10px 25px;
     margin: 3px 0;
-    background-color: #fff
+    background-color: #f7f7f7;
+}
+
+
 }
 
 #sidebar-menu>ul>li>a:hover {
@@ -2918,7 +2925,7 @@ body.fixed-left .side-menu.left {
 
 #sidebar-menu>ul>li>a.active {
     color: #242c6d;
-    background-color: rgba(36, 44, 109, .15)
+    background-color: #f7f7f7;
 }
 
 #sidebar-menu>ul>li>a.active i {
