--- a/public/front-end/css/style.css
+++ b/public/front-end/css/style.css
@@ -1,4 +1,4 @@
-/* 
+/*
 ------------------
 Template Name: tekasaibd
 Author: Md Hafizul Islam (hafiz)
@@ -1380,8 +1380,7 @@ Author Email: hafizul6280@gmail.com
 }
 
 .secound_section .tab-content .form-control {
-    width: 400px;
-    height: 40px;
+    width: 75%;
     margin: 20px;
     padding: 25px 10px;
 }
@@ -1397,12 +1396,13 @@ Author Email: hafizul6280@gmail.com
 .secound_section .tab-content .share-btn {
     padding: 15px 40px;
     color: #000;
-    font-size: 28px;
+    margin-left: 2.5rem!important;
+    /*font-size: 28px;*/
     background: #ffffff;
-    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    box-shadow: 0 1rem 3rem rgba(0,0,0,.100)!important;
     font-size: 16px;
     border-radius: 5px;
-    margin-left: 150px;
+    /*margin-left: 150px;*/
     -webkit-transition: all .4s ease;
     -moz-transition: all .4s ease;
     -ms-transition: all .4s ease;
