--- a/public/front-end/css/style.css
+++ b/public/front-end/css/style.css
@@ -1360,7 +1360,7 @@ Author Email: hafizul6280@gmail.com
     width: 100%;
     height: 541px;
     margin-top: 23px;
-    background: rgba(255, 255, 255, 0.63);
+    background: rgba(105, 105, 105, 0);
     box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
 }
@@ -2049,6 +2049,22 @@ label {
     border: 1px solid #dee2e6;
 }
 
+.file-item {
+    padding: 6px;
+}
+.exam-preview-card {
+    background: rgba(105, 105, 105, 0);
+    margin-top: 38px;
+
+    min-height: 543px;
+
+}
+
+.times {
+    background: #6a82c5;
+    height: 35px;
+    padding: 6px;
+}
 
 @import url('https://fonts.googleapis.com/css2?family=Atma:wght@300;400;500;600;700&family=Baloo+Da+2:wght@400;500;600&family=Galada&family=Hind+Siliguri:wght@300;400;500;600&family=Mina:wght@400;700&display=swap');
 
