--- a/public/front-end/css/style.css
+++ b/public/front-end/css/style.css
@@ -501,16 +501,17 @@ ol {
     z-index: 1;
     width: 100%;
     top: 68px;
-}
+    height: 31px;
 }
 
 
-.top-bar .update-part .update p {
+
+.update-label {
     background: #6194CE;
     color: white;
-    font-size: 18px;
-    padding: 2px 10px;
-    margin-bottom: 0px;
+    font-size: 19px;
+    padding: 5px 10px;
+    margin-bottom: 0;
 }
 
 .top-bar .update-part .up-content p {
@@ -1261,7 +1262,7 @@ Author Email: hafizul6280@gmail.com
 
 .book-img img {
     width: 100%;
-    height: 100%;
+    height: 317px;
 
 }
 
@@ -1447,10 +1448,6 @@ secound_section .tab-content .share-btn:hover {
 
 /*========================== communaction part start =====================*/
 
-#communication-part {
-    /*    background: #a8a8a8;*/
-    padding: 60px 0px 60px 0px;
-}
 
 #communication-part .online-left {
     margin-left: 180px;
@@ -2102,6 +2099,24 @@ label {
 
 .exam-cover{
     filter: brightness(40%);
+}
+
+.quiz_time {
+    background: #2f55d4;
+    color: #fff;
+    bottom: 0;
+    padding: 10px 20px;
+    font-size: 20px;
+    border-radius: 10px 10px 0 0;
+    font-weight: bold;
+    display: none;
+}
+
+.mission-vision {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    padding: 43px;
+    font-size: 18px;
 }
 @import url('https://fonts.googleapis.com/css2?family=Atma:wght@300;400;500;600;700&family=Baloo+Da+2:wght@400;500;600&family=Galada&family=Hind+Siliguri:wght@300;400;500;600&family=Mina:wght@400;700&display=swap');
 
