Fixes minor issues meta extracted for testing

--- a/public/front-end/css/responsive.css
+++ b/public/front-end/css/responsive.css
@@ -737,7 +737,7 @@
     }
 
     #about_bg {
-        margin-top: 122px;
+        /*margin-top: 122px;*/
     }
 
     #about_bg .text_center h1::after {
@@ -767,7 +767,7 @@
     }
 
     #bongobondhu_bg {
-        margin-top: 121px;
+        /*margin-top: 121px;*/
     }
 
     #our-message .blog-1 {
@@ -1280,11 +1280,11 @@
     }
 
     #about_bg {
-        margin-top: 121px;
+        /*margin-top: 121px;*/
     }
 
     #bongobondhu_bg {
-        margin-top: 121px;
+        /*margin-top: 121px;*/
     }
 
 
