Updated changes on creative section design

--- a/public/front-end/css/style.css
+++ b/public/front-end/css/style.css
@@ -2092,6 +2092,9 @@ label {
 
 .exam-cover{
     filter: brightness(40%);
+    height: auto !important;
+    min-height: 193px;
+    max-height: 192px;
 }
 
 .quiz_time {
