--- a/public/front-end/css/style.css
+++ b/public/front-end/css/style.css
@@ -884,7 +884,7 @@ ol {
 
 #team_member .overlay {
     background: rgba(0, 0, 0, 0.1);
-    padding: 60px 0px 60px 0px;
+    padding: 45px 0px 30px 0px;
 }
 
 
@@ -954,7 +954,7 @@ ol {
 }
 
 .choice_category .padding_none {
-    box-shadow: 0 1px 6px 0 rgba(255, 255, 255, 3), 0 6px 25px 0 #fff;
+    box-shadow: 1px 0px 20px 0px #0c0c0c;
     background: red;
 }
 
