--- a/public/front-end/css/style.css
+++ b/public/front-end/css/style.css
@@ -1688,7 +1688,7 @@ Author Email: hafizul6280@gmail.com
 
 
 #our-message .blog-1 .blog-text span {
-    color: color: rgba(0, 0, 0, 0.14);
+    color: rgba(0, 0, 0, 0.14);
     float: right;
 }
 
